[package]
name = "testing"
version = "0.1.0"
edition = "2021"
authors = ["mdmourao <martimmourao@gmail.com>"]

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version = "0.7", features = ['http'] }
worker-macros = { version = "0.7", features = ['http'] }
http = "1.3"
futures-util = "0.3.31"
